<resources>
    <string name="app_name">BlueFaceCodingChallenge</string>
    <string name="cityRank">Rank</string>
    <string name="cityName">City</string>
    <string name="newCityTitle">New City</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptyStateMessage">Hey! start adding your first city that you like most !</string>
    <string name="addButton">Add a city</string>
    <string name="searchStringHint">Search here...</string>
</resources>