<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"
        app:contentInsetStart="0dp"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_chevron"
                android:tint="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newCityTitle"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:padding="8dp"/>

        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/cityName"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/cityRank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@+id/city"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/cityRank"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/addCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintVertical_bias="0.95"
        android:src="@drawable/ic_send"
        android:background="@android:color/transparent"/>

</androidx.constraintlayout.widget.ConstraintLayout>